# virtual_asic_miner

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: USAGE.md
src/virtual_asic_miner/: api_server.py  bitaxe_compat.py  cli.py  compat_server.py  cors.py  models.py  sim.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  styles.css
